--- a/src/Header.css
+++ b/src/Header.css
@@ -6,3 +6,18 @@
     background-color: #98FF98;
   }
   
+  h1 {
+    color: white;
+  }
+
+  h2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    color: white;
+  }
+
+  h3 {
+    color: white;
+  }
