--- a/src/Header.css
+++ b/src/Header.css
@@ -4,10 +4,12 @@
     align-items: center;
     height: 100px;
     background-color: #98FF98;
+    font-size: 80;
   }
   
   h1 {
     color: white;
+    font-size: 80px;
   }
 
   h2 {
@@ -20,4 +22,9 @@
 
   h3 {
     color: white;
+  }
+
+  .searchbar {
+    color: white;
+    font-size: 50px;
   }
